# dispenso

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile  LICENSE.md  README.md  annotated.html  annotated_dup.js  async__request_8h.html  async__request_8h.js  async__request_8h_source.html  classdispenso_1_1_async_request-members.html  classdispenso_1_1_async_request.html  classdispenso_1_1_async_request.js  classdispenso_1_1_bi_prop_node-members.html  classdispenso_1_1_bi_prop_node.html  classdispenso_1_1_bi_prop_node.js  classdispenso_1_1_cache_aligned-members.html  classdispenso_1_1_cache_aligned.html  classdispenso_1_1_cache_aligned.js  classdispenso_1_1_completion_event-members.html  classdispenso_1_1_completion_event.html  classdispenso_1_1_completion_event.js  classdispenso_1_1_concurrent_task_set-members.html  classdispenso_1_1_concurrent_task_set.html  classdispenso_1_1_concurrent_task_set.js  classdispenso_1_1_concurrent_task_set_executor-members.html  classdispenso_1_1_concurrent_task_set_executor.html  classdispenso_1_1_concurrent_task_set_executor.js  classdispenso_1_1_concurrent_vector-members.html  classdispenso_1_1_concurrent_vector.html  classdispenso_1_1_concurrent_vector.js  classdispenso_1_1_forward_propagator-members.html  classdispenso_1_1_forward_propagator.html  classdispenso_1_1_forward_propagator.js  classdispenso_1_1_future-members.html  classdispenso_1_1_future.html  (+270 more)
.circleci/: config.yml
.github/: pull_request_template.md
benchmarks/: CMakeLists.txt  benchmark_common.h  benchmark_results.md  cascading_parallel_for_benchmark.cpp  concurrent_vector_benchmark.cpp  concurrent_vector_tcmalloc_details.md  for_each_benchmark.cpp  for_latency_benchmark.cpp  future_benchmark.cpp  future_details.md  graph_benchmark.cpp  graph_scene_benchmark.cpp  graph_scene_details.md  idle_pool_benchmark.cpp  index.html  locality_benchmark.cpp  nested_for_benchmark.cpp  nested_pool_benchmark.cpp  once_function_benchmark.cpp  once_function_details.md  pipeline_benchmark.cpp  pipeline_details.md  pool_allocator_benchmark.cpp  pool_allocator_details.md  run_benchmarks.py  rw_lock_benchmark.cpp  rw_lock_details.md  simple_for_benchmark.cpp  simple_for_details.md  simple_pool_benchmark.cpp  small_buffer_benchmark.cpp  small_buffer_details.md  summing_for_benchmark.cpp  summing_for_details.md  tbb_compat.h  thread_benchmark_common.h  timed_task_benchmark.cpp  trivial_compute_benchmark.cpp  trivial_compute_details.md
benchmarks/fast_math/: CMakeLists.txt  avx512_benchmarks.cpp  avx_benchmarks.cpp  benchmark_helpers.h  benchmarks.cpp  erf_benchmarks.cpp  hwy_benchmarks.cpp  neon_benchmarks.cpp  sse_benchmarks.cpp
cmake/: DispensoConfig.cmake.in
dispenso/: CMakeLists.txt  async_request.h  completion_event.h  concurrent_object_arena.h  concurrent_vector.h  dispenso.h  for_each.h  future.h  graph.cpp  graph.h  graph_executor.cpp  graph_executor.h  latch.h  once_function.h  parallel_for.h  pipeline.h  platform.h  pool_allocator.cpp  pool_allocator.h  priority.cpp  priority.h  resource_pool.h  rw_lock.h  schedulable.cpp  schedulable.h  small_buffer_allocator.cpp  small_buffer_allocator.h  small_vector.h  spsc_ring_buffer.h  task_set.cpp  task_set.h  thread_id.cpp  thread_id.h  thread_pool.cpp  thread_pool.h  timed_task.cpp  timed_task.h  timing.cpp  timing.h  tsan_annotations.cpp  (+2 more)
dispenso/detail/: can_invoke.h  completion_event_impl.h  concurrent_vector_impl.h  concurrent_vector_impl2.h  epoch_waiter.h  future_impl.h  future_impl2.h  graph_executor_impl.h  math.h  notifier_common.h  once_callable_impl.h  op_result.h  per_thread_info.cpp  per_thread_info.h  pipeline_impl.h  quanta.cpp  quanta.h  result_of.h  rw_lock_impl.h  small_buffer_allocator_impl.h  task_set_impl.h  timed_task_impl.h
dispenso/ext/moodycamel/: README.txt  concurrentqueue.h  lightweightsemaphore.h
dispenso/fast_math/: README.md  fast_math.h  float_traits.h  float_traits_avx.h  float_traits_avx512.h  float_traits_hwy.h  float_traits_neon.h  float_traits_x86.h  simd.h  util.h
dispenso/fast_math/detail/: double_promote.h  fast_math_impl.h
dispenso/utils/: graph_dot.h
docs/: Doxyfile  annotated.html  annotated_dup.js  async__request_8h.html  async__request_8h_source.html  building.md  classdispenso_1_1_async_request.html  classdispenso_1_1_cache_aligned-members.html  (+140 more)
examples/: CMakeLists.txt  concurrent_vector_example.cpp  for_each_example.cpp  future_example.cpp  graph_example.cpp  latch_example.cpp  parallel_for_example.cpp  pipeline_example.cpp  resource_pool_example.cpp  task_set_example.cpp
results/: linux_x64.json  (+3 more)
tests/: CMakeLists.txt  async_request_test.cpp  chunked_for_test.cpp  completion_event_test.cpp  concurrent_object_arena_test.cpp  concurrent_vector_a_test.cpp  concurrent_vector_b_test.cpp  concurrent_vector_default_test.cpp  concurrent_vector_nocache_test.cpp  concurrent_vector_test.cpp  concurrent_vector_test_common.h  concurrent_vector_test_common_types.h  for_each_test.cpp  forward_shared_pool.cpp  future_test.cpp  graph_test.cpp  greedy_for_ranges_test.cpp  greedy_for_test.cpp  latch_test.cpp  once_function_test.cpp  pipeline_test.cpp  pool_allocator_test.cpp  priority_test.cpp  resource_pool_test.cpp  rw_lock_test.cpp  shared_pool_test.cpp  small_buffer_allocator_test.cpp  small_vector_test.cpp  spsc_ring_buffer_test.cpp  task_set_test.cpp  test_tid.h  thread_id_test.cpp  thread_pool_test.cpp  timed_task_test.cpp  timing_test.cpp  util_test.cpp
tests/fast_math/: CMakeLists.txt  acos_test.cpp  asin_test.cpp  atan2_test.cpp  atan_test.cpp  avx512_test.cpp  avx_test.cpp  bivariate_ulp_eval.h  cbrt_test.cpp  cos_test.cpp  erf_test.cpp  eval.cpp  eval.h  exp10_test.cpp  exp2_test.cpp  exp_test.cpp  expm1_test.cpp  frexp_test.cpp  hwy_test.cpp  hypot_test.cpp  ldexp_test.cpp  log10_test.cpp  log1p_test.cpp  log2_test.cpp  log_test.cpp  neon_test.cpp  pow_test.cpp  pow_ulp_eval.cpp  simd_test_utils.h  sin_test.cpp  sincos_test.cpp  sinpi_test.cpp  sse_test.cpp  tan_test.cpp  tanh_test.cpp  test_main.cpp  ulp_eval.cpp  util_test.cpp
(+301 files in other folders)
